--- a/lab/cfg-generator/templates/v4only/pop-router.cfg
+++ b/lab/cfg-generator/templates/v4only/pop-router.cfg
@@ -46,6 +46,7 @@ router bgp 65530
  address-family ipv4
   no auto-summary
   no synchronization
+  redistribute static
   neighbor POP${POP}-iBGP-IPv4 peer-group
   neighbor POP${POP}-iBGP-IPv4 remote-as 65530
   neighbor POP${POP}-iBGP-IPv4 update-source Loopback0
