The IPv4 stuff is almost finished...
Added customer routes, made it more realistic

--- a/lab/cfg-generator/templates/v4only/pop-router.cfg
+++ b/lab/cfg-generator/templates/v4only/pop-router.cfg
@@ -24,7 +24,7 @@ ip classless
 !
 interface loopback 0
  description "POP ${POP} Router ${ROUTER} Loopback"
- ip address 10.${POP}.0.${ROUTER} 255.255.255.255
+ ip address 172.16.${POP}.${ROUTER} 255.255.255.255
  ip ospf 1 area ${POP}.0.0.0
  no ip redirects
  no ip directed-broadcast
@@ -33,7 +33,7 @@ interface loopback 0
 !
 router ospf 1
  log-adjacency-changes
- router-id 10.${POP}.0.${ROUTER}
+ router-id 172.16.${POP}.${ROUTER}
  area ${POP}.0.0.0 authentication message-digest
  area ${POP}.0.0.0 nssa
  passive-interface default
@@ -41,7 +41,7 @@ router ospf 1
  no passive-interface f0/1
 !
 router bgp 65530
- bgp router-id 10.${POP}.0.${ROUTER}
+ bgp router-id 172.16.${POP}.${ROUTER}
  bgp log-neighbor-changes
  address-family ipv4
   no auto-summary
@@ -58,7 +58,7 @@ interface f0/0
  no ip directed-broadcast
  no ip unreachables
  ip ospf 1 area ${POP}.0.0.0
- ip ospf message-digest-key 1 md5 R04d5how-P0P${POP}
+ ip ospf message-digest-key 1 md5 "R04d5how-P0P${POP}"
  shutdown
 !
 interface f0/1
@@ -68,7 +68,7 @@ interface f0/1
  no ip directed-broadcast
  no ip unreachables
  ip ospf 1 area ${POP}.0.0.0
- ip ospf message-digest-key 1 md5 R04d5how-P0P${POP}
+ ip ospf message-digest-key 1 md5 "R04d5how-P0P${POP}"
  shutdown
 !
 interface e1/0
@@ -76,6 +76,7 @@ interface e1/0
  no ip redirects
  no ip directed-broadcast
  no ip unreachables
+ ip ospf 1 area ${POP}.0.0.0
  shutdown
 !
 interface e1/1
@@ -83,6 +84,7 @@ interface e1/1
  no ip redirects
  no ip directed-broadcast
  no ip unreachables
+ ip ospf 1 area ${POP}.0.0.0
  shutdown
 !
 interface e1/2
@@ -90,6 +92,7 @@ interface e1/2
  no ip redirects
  no ip directed-broadcast
  no ip unreachables
+ ip ospf 1 area ${POP}.0.0.0
  shutdown
 !
 interface e1/3
@@ -97,6 +100,7 @@ interface e1/3
  no ip redirects
  no ip directed-broadcast
  no ip unreachables
+ ip ospf 1 area ${POP}.0.0.0
  shutdown
 !
 line console 0
