Add IPv6 addresses to core switch links

--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -118,6 +118,8 @@ interface e1/0
  ip address 172.16.0.$((POP+224)) 255.255.255.240	! ONLY v4
  ip ospf 1 area 0.0.0.0					! ONLY v4
  ip ospf message-digest-key 1 md5 "R04d5how-C0RE"	! ONLY v4
+ ipv6 address 2001:db8:0:1::${POP}			! ONLY v6
+ ipv6 ospf 1 area 0.0.0.0				! ONLY v6
  --END--
  --ONLY R3--
  description "Link to POP${POP}-CUST2"
@@ -139,6 +141,8 @@ interface e1/1
  ip ospf message-digest-key 1 md5 "R04d5how-C0RE"	! ONLY v4
  no ip redirects					! ONLY v4
  no ip directed-broadcast				! ONLY v4
+ ipv6 address 2001:db8:0:2::${POP}			! ONLY v6
+ ipv6 ospf 1 area 0.0.0.0				! ONLY v6
  no ipv6 redirects					! ONLY v6
  no shutdown
  --END--
