Fix OSPF area error

--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -111,7 +111,9 @@ interface e1/0
  description "Link to POP${POP}-CUST1"
  no cdp enable
  ip address 172.16.2${POP}.1 255.255.255.252		! ONLY v4
+ ip ospf 1 area ${POP}.0.0.0				! ONLY v4
  ipv6 address 2001:db8:${POP}:ff01::1/64		! ONLY v6
+ ipv6 ospf 1 area ${POP}.0.0.0				! ONLY v4
  --END--
  --ONLY R2--
  description "Link to core switch SW1"
@@ -125,7 +127,9 @@ interface e1/0
  description "Link to POP${POP}-CUST2"
  no cdp enable
  ip address 172.16.2${POP}.5 255.255.255.252		! ONLY v4
+ ip ospf 1 area ${POP}.0.0.0				! ONLY v4
  ipv6 address 2001:db8:${POP}:ff02::1/64		! ONLY v6
+ ipv6 ospf 1 area ${POP}.0.0.0				! ONLY v4
  --END--
  no ip redirects					! ONLY v4
  no ip directed-broadcast				! ONLY v4
