Fix errors and apply best-practices

--- a/lab/cfg-generator/templates/pop-customer.cfg
+++ b/lab/cfg-generator/templates/pop-customer.cfg
@@ -39,6 +39,10 @@ interface loopback 0
  no ip redirects
  no ip directed-broadcast
  --END--
+ --ONLY v6--
+ ipv6 address 2001:db8:${POP}00${CUSTOMER}::1/128
+ no ipv6 redirects
+ --END--
  no shutdown
 !
 interface f0/0
@@ -51,8 +55,7 @@ interface f0/0
  no ip directed-broadcast
  --END--
  --ONLY v6--
- ipv6 address 2001:db8:${POP}:ff01::2/64		! ONLY CUST1
- ipv6 address 2001:db8:${POP}:ff02::2/64		! ONLY CUST2
+ ipv6 address 2001:db8:${POP}:ff0${CUSTOMER}::2/64
  no ipv6 redirects
  --END--
  no cdp enable
@@ -67,8 +70,7 @@ interface f0/1
  no ip directed-broadcast
  --END--
  --ONLY v6--
- ipv6 address 2001:db8:${POP}001:abcd::1/64		! ONLY CUST1
- ipv6 address 2001:db8:${POP}002:abcd::1/64		! ONLY CUST2
+ ipv6 address 2001:db8:${POP}00${CUSTOMER}:abcd::1/64
  no ipv6 redirects
  --END--
  no shutdown
