--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -120,7 +120,7 @@ interface e1/0
  ip address 172.16.0.$((POP+224)) 255.255.255.240	! ONLY v4
  ip ospf 1 area 0.0.0.0					! ONLY v4
  ip ospf message-digest-key 1 md5 "R04d5how-C0RE"	! ONLY v4
- ipv6 address 2001:db8:0:1::${POP}			! ONLY v6
+ ipv6 address 2001:db8:0:1::${POP}/64			! ONLY v6
  ipv6 ospf 1 area 0.0.0.0				! ONLY v6
  --END--
  --ONLY R3--
@@ -145,7 +145,7 @@ interface e1/1
  ip ospf message-digest-key 1 md5 "R04d5how-C0RE"	! ONLY v4
  no ip redirects					! ONLY v4
  no ip directed-broadcast				! ONLY v4
- ipv6 address 2001:db8:0:2::${POP}			! ONLY v6
+ ipv6 address 2001:db8:0:2::${POP}/64			! ONLY v6
  ipv6 ospf 1 area 0.0.0.0				! ONLY v6
  no ipv6 redirects					! ONLY v6
  no shutdown
@@ -217,7 +217,6 @@ router bgp 65530
  --END--
  --ONLY R2-v4--
   network 172.16.0.0 mask 255.240.0.0
-  aggregate-address 172.2${POP}.0.0 255.255.0.0 summary-only
   neighbor POP${POP}-iBGP-IPv4 route-reflector-client
   neighbor 172.16.${POP}.1 peer-group POP${POP}-iBGP-IPv4
   neighbor 172.16.${POP}.3 peer-group POP${POP}-iBGP-IPv4
@@ -263,7 +262,6 @@ router bgp 65530
   neighbor 2001:db8::${POP}:1 peer-group POP${POP}-iBGP-IPv6
   neighbor 2001:db8::${POP}:3 peer-group POP${POP}-iBGP-IPv6
   network 2001:db8::/32
-  aggregate-address 2001:db8:${POP}000::/40 summary-only
   neighbor POP${POP}-iBGP-IPv6 route-reflector-client
   neighbor 2001:db8::${POP}:1 peer-group POP${POP}-iBGP-IPv6
   neighbor 2001:db8::${POP}:3 peer-group POP${POP}-iBGP-IPv6
