--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -72,6 +72,7 @@ interface f0/0
  --END--
  --ONLY v6--
  no ipv6 redirects
+ ipv6 nd ra suppress all
  ipv6 ospf 1 area ${POP}.0.0.0
  --END--
  no shutdown
@@ -101,6 +102,7 @@ interface f0/1
  --END--
  --ONLY v6--
  no ipv6 redirects
+ ipv6 nd ra suppress all
  ipv6 ospf 1 area ${POP}.0.0.0
  --END--
  no shutdown
@@ -134,6 +136,7 @@ interface e1/0
  no ip redirects					! ONLY v4
  no ip directed-broadcast				! ONLY v4
  no ipv6 redirects					! ONLY v6
+ ipv6 nd ra suppress all				! ONLY v6
  no shutdown
 !
 interface e1/1
@@ -148,6 +151,7 @@ interface e1/1
  ipv6 address 2001:db8:0:2::${POP}/64			! ONLY v6
  ipv6 ospf 1 area 0.0.0.0				! ONLY v6
  no ipv6 redirects					! ONLY v6
+ ipv6 nd ra suppress all				! ONLY v6
  no shutdown
  --END--
 !
@@ -156,6 +160,7 @@ interface e1/2
  no ip redirects					! ONLY v4
  no ip directed-broadcast				! ONLY v4
  no ipv6 redirects					! ONLY v6
+ ipv6 nd ra suppress all				! ONLY v6
  shutdown
 !
 interface e1/3
@@ -163,6 +168,7 @@ interface e1/3
  no ip redirects					! ONLY v4
  no ip directed-broadcast				! ONLY v4
  no ipv6 redirects					! ONLY v6
+ ipv6 nd ra suppress all				! ONLY v6
  shutdown
 !
 --ONLY v4--
