--- a/lab/cfg-generator/templates/pop-customer.cfg
+++ b/lab/cfg-generator/templates/pop-customer.cfg
@@ -57,6 +57,7 @@ interface f0/0
  --ONLY v6--
  ipv6 address 2001:db8:${POP}:ff0${CUSTOMER}::2/64
  no ipv6 redirects
+ ipv6 nd ra suppress all
  --END--
  no cdp enable
  no shutdown
