Apply some of Philip's comments

--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -37,13 +37,10 @@ interface loopback 0
  --ONLY v4--
  ip address 172.16.${POP}.${ROUTER} 255.255.255.255
  ip ospf 1 area ${POP}.0.0.0
- no ip redirects
- no ip directed-broadcast
  --END--
  --ONLY v6--
  ipv6 address 2001:db8::${POP}:${ROUTER}/128
  ipv6 ospf 1 area ${POP}.0.0.0
- no ipv6 redirects
  --END--
  no shutdown
 !
@@ -176,14 +173,14 @@ router ospf 1
  log-adjacency-changes
  router-id 172.16.${POP}.${ROUTER}
  area ${POP}.0.0.0 authentication message-digest
- area ${POP}.0.0.0 nssa
+ area ${POP}.0.0.0 stub
  passive-interface default
  no passive-interface f0/0
  no passive-interface f0/1
 --END--
 --ONLY R2-v4--
  area 0.0.0.0 authentication message-digest
- area ${POP}.0.0.0 nssa default-information-originate no-summary
+ area ${POP}.0.0.0 stub default-information-originate no-summary
  no passive-interface e1/0
  no passive-interface e1/1
 --END--
@@ -192,13 +189,13 @@ router ospf 1
 ipv6 router ospf 1
  log-adjacency-changes
  router-id 172.16.${POP}.${ROUTER}
- area ${POP}.0.0.0 nssa
+ area ${POP}.0.0.0 stub
  passive-interface default
  no passive-interface f0/0
  no passive-interface f0/1
 --END--
 --ONLY R2-v6--
- area ${POP}.0.0.0 nssa default-information-originate no-summary
+ area ${POP}.0.0.0 stub default-information-originate no-summary
  no passive-interface e1/0
  no passive-interface e1/1
 --END--
@@ -206,7 +203,7 @@ ipv6 router ospf 1
 router bgp 65530
  bgp router-id 172.16.${POP}.${ROUTER}
  bgp log-neighbor-changes
- no bgp default ipv4-unicast			! ONLY v6
+ no bgp default ipv4-unicast				! ONLY v6
  --ONLY v4--
  address-family ipv4
   no auto-summary
@@ -215,34 +212,47 @@ router bgp 65530
   neighbor POP${POP}-iBGP-IPv4 peer-group
   neighbor POP${POP}-iBGP-IPv4 remote-as 65530
   neighbor POP${POP}-iBGP-IPv4 update-source Loopback0
-  neighbor POP${POP}-iBGP-IPv4 soft-reconfiguration inbound
  --END--
  --ONLY R1-v4--
   neighbor 172.16.${POP}.2 peer-group POP${POP}-iBGP-IPv4
+  neighbor 172.16.${POP}.2 activate
   neighbor 172.16.${POP}.3 peer-group POP${POP}-iBGP-IPv4
+  neighbor 172.16.${POP}.3 activate
  --END--
  --ONLY R2-v4--
   network 172.16.0.0 mask 255.240.0.0
   neighbor POP${POP}-iBGP-IPv4 route-reflector-client
   neighbor 172.16.${POP}.1 peer-group POP${POP}-iBGP-IPv4
+  neighbor 172.16.${POP}.1 activate
   neighbor 172.16.${POP}.3 peer-group POP${POP}-iBGP-IPv4
+  neighbor 172.16.${POP}.3 activate
   neighbor Core-iBGP-IPv4 peer-group
   neighbor Core-iBGP-IPv4 remote-as 65530
   neighbor Core-iBGP-IPv4 update-source Loopback0
-  neighbor Core-iBGP-IPv4 soft-reconfiguration inbound
   neighbor 172.16.1.2 peer-group Core-iBGP-IPv4		! ONLY POP1EXISTS
+  neighbor 172.16.1.2 activate				! ONLY POP1EXISTS
   neighbor 172.16.2.2 peer-group Core-iBGP-IPv4		! ONLY POP2EXISTS
+  neighbor 172.16.2.2 activate				! ONLY POP2EXISTS
   neighbor 172.16.3.2 peer-group Core-iBGP-IPv4		! ONLY POP3EXISTS
+  neighbor 172.16.3.2 activate				! ONLY POP3EXISTS
   neighbor 172.16.4.2 peer-group Core-iBGP-IPv4		! ONLY POP4EXISTS
+  neighbor 172.16.4.2 activate				! ONLY POP4EXISTS
   neighbor 172.16.5.2 peer-group Core-iBGP-IPv4		! ONLY POP5EXISTS
+  neighbor 172.16.5.2 activate				! ONLY POP5EXISTS
   neighbor 172.16.6.2 peer-group Core-iBGP-IPv4		! ONLY POP6EXISTS
+  neighbor 172.16.6.2 activate				! ONLY POP6EXISTS
   neighbor 172.16.7.2 peer-group Core-iBGP-IPv4		! ONLY POP7EXISTS
+  neighbor 172.16.7.2 activate				! ONLY POP7EXISTS
   neighbor 172.16.8.2 peer-group Core-iBGP-IPv4		! ONLY POP8EXISTS
+  neighbor 172.16.8.2 activate				! ONLY POP8EXISTS
   neighbor 172.16.9.2 peer-group Core-iBGP-IPv4		! ONLY POP9EXISTS
+  neighbor 172.16.9.2 activate				! ONLY POP9EXISTS
  --END--
  --ONLY R3-v4--
   neighbor 172.16.${POP}.1 peer-group POP${POP}-iBGP-IPv4
+  neighbor 172.16.${POP}.1 activate
   neighbor 172.16.${POP}.2 peer-group POP${POP}-iBGP-IPv4
+  neighbor 172.16.${POP}.2 activate
   neighbor 172.16.2${POP}.6 remote-as 650${POP}2
   neighbor 172.16.2${POP}.6 description "BGP customer POP${POP}-CUST2"
   neighbor 172.16.2${POP}.6 password "Cu5t0m3r"
@@ -258,34 +268,47 @@ router bgp 65530
   neighbor POP${POP}-iBGP-IPv6 peer-group
   neighbor POP${POP}-iBGP-IPv6 remote-as 65530
   neighbor POP${POP}-iBGP-IPv6 update-source Loopback0
-  neighbor POP${POP}-iBGP-IPv6 soft-reconfiguration inbound
  --END--
  --ONLY R1-v6--
   neighbor 2001:db8::${POP}:2 peer-group POP${POP}-iBGP-IPv6
+  neighbor 2001:db8::${POP}:2 activate
   neighbor 2001:db8::${POP}:3 peer-group POP${POP}-iBGP-IPv6
+  neighbor 2001:db8::${POP}:3 activate
  --END--
  --ONLY R2-v6--
   neighbor 2001:db8::${POP}:1 peer-group POP${POP}-iBGP-IPv6
+  neighbor 2001:db8::${POP}:1 activate
   neighbor 2001:db8::${POP}:3 peer-group POP${POP}-iBGP-IPv6
+  neighbor 2001:db8::${POP}:3 activate
   network 2001:db8::/32
   neighbor POP${POP}-iBGP-IPv6 route-reflector-client
   neighbor Core-iBGP-IPv6 peer-group
   neighbor Core-iBGP-IPv6 remote-as 65530
   neighbor Core-iBGP-IPv6 update-source Loopback0
-  neighbor Core-iBGP-IPv6 soft-reconfiguration inbound
   neighbor 2001:db8::1:2 peer-group Core-iBGP-IPv6	! ONLY POP1EXISTS
+  neighbor 2001:db8::1:2 activate			! ONLY POP1EXISTS
   neighbor 2001:db8::2:2 peer-group Core-iBGP-IPv6	! ONLY POP2EXISTS
+  neighbor 2001:db8::2:2 activate			! ONLY POP2EXISTS
   neighbor 2001:db8::3:2 peer-group Core-iBGP-IPv6	! ONLY POP3EXISTS
+  neighbor 2001:db8::3:2 activate			! ONLY POP3EXISTS
   neighbor 2001:db8::4:2 peer-group Core-iBGP-IPv6	! ONLY POP4EXISTS
+  neighbor 2001:db8::4:2 activate			! ONLY POP4EXISTS
   neighbor 2001:db8::5:2 peer-group Core-iBGP-IPv6	! ONLY POP5EXISTS
+  neighbor 2001:db8::5:2 activate			! ONLY POP5EXISTS
   neighbor 2001:db8::6:2 peer-group Core-iBGP-IPv6	! ONLY POP6EXISTS
+  neighbor 2001:db8::6:2 activate			! ONLY POP6EXISTS
   neighbor 2001:db8::7:2 peer-group Core-iBGP-IPv6	! ONLY POP7EXISTS
+  neighbor 2001:db8::7:2 activate			! ONLY POP7EXISTS
   neighbor 2001:db8::8:2 peer-group Core-iBGP-IPv6	! ONLY POP8EXISTS
+  neighbor 2001:db8::8:2 activate			! ONLY POP8EXISTS
   neighbor 2001:db8::9:2 peer-group Core-iBGP-IPv6	! ONLY POP9EXISTS
+  neighbor 2001:db8::9:2 activate			! ONLY POP9EXISTS
  --END--
  --ONLY R3-v6--
   neighbor 2001:db8::${POP}:1 peer-group POP${POP}-iBGP-IPv6
+  neighbor 2001:db8::${POP}:1 activate
   neighbor 2001:db8::${POP}:2 peer-group POP${POP}-iBGP-IPv6
+  neighbor 2001:db8::${POP}:2 activate
   neighbor 2001:db8:${POP}:ff02::2 remote-as 650${POP}2
   neighbor 2001:db8:${POP}:ff02::2 description "BGP customer POP${POP}-CUST2"
   neighbor 2001:db8:${POP}:ff02::2 password "Cu5t0m3r"
