changed all router2router links to {ab}/127 instead of {12}/64

--- a/lab/cfg-generator/templates/pop-customer.cfg
+++ b/lab/cfg-generator/templates/pop-customer.cfg
@@ -55,7 +55,7 @@ interface f0/0
  no ip directed-broadcast
  --END--
  --ONLY v6--
- ipv6 address 2001:db8:${POP}:ff0${CUSTOMER}::2/64
+ ipv6 address 2001:db8:${POP}:ff0${CUSTOMER}::b/127
  no ipv6 redirects
  ipv6 nd ra suppress all
  --END--
@@ -71,7 +71,7 @@ interface f0/1
  no ip directed-broadcast
  --END--
  --ONLY v6--
- ipv6 address 2001:db8:${POP}00${CUSTOMER}:abcd::1/64
+ ipv6 address 2001:db8:${POP}00${CUSTOMER}:abcd::b/127
  no ipv6 redirects
  --END--
  no shutdown
