--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -49,17 +49,17 @@ interface f0/0
  --ONLY R1--
  description "Link to POP${POP}-R3"
  ip address 172.16.1${POP}.10 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}03::2/64			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}03::b/127			! ONLY v6
  --END--
  --ONLY R2--
  description "Link to POP${POP}-R1"
  ip address 172.16.1${POP}.2 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}01::2/64			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}01::b/127			! ONLY v6
  --END--
  --ONLY R3--
  description "Link to POP${POP}-R2"
  ip address 172.16.1${POP}.6 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}02::2/64			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}02::b/127			! ONLY v6
  --END--
  --ONLY v4--
  no ip redirects
@@ -79,17 +79,17 @@ interface f0/1
  --ONLY R1--
  description "Link to POP${POP}-R2"
  ip address 172.16.1${POP}.1 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}01::1/64			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}01::a/127			! ONLY v6
  --END--
  --ONLY R2--
  description "Link to POP${POP}-R3"
  ip address 172.16.1${POP}.5 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}02::1/64			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}02::a/127			! ONLY v6
  --END--
  --ONLY R3--
  description "Link to POP${POP}-R1"
  ip address 172.16.1${POP}.9 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}03::1/64			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}03::a/127			! ONLY v6
  --END--
  --ONLY v4--
  no ip redirects
@@ -111,7 +111,7 @@ interface e1/0
  no cdp enable
  ip address 172.16.2${POP}.1 255.255.255.252		! ONLY v4
  ip ospf 1 area ${POP}.0.0.0				! ONLY v4
- ipv6 address 2001:db8:${POP}:ff01::1/64		! ONLY v6
+ ipv6 address 2001:db8:${POP}:ff01::a/127		! ONLY v6
  ipv6 ospf 1 area ${POP}.0.0.0				! ONLY v4
  --END--
  --ONLY R2--
@@ -127,7 +127,7 @@ interface e1/0
  no cdp enable
  ip address 172.16.2${POP}.5 255.255.255.252		! ONLY v4
  ip ospf 1 area ${POP}.0.0.0				! ONLY v4
- ipv6 address 2001:db8:${POP}:ff02::1/64		! ONLY v6
+ ipv6 address 2001:db8:${POP}:ff02::a/127		! ONLY v6
  ipv6 ospf 1 area ${POP}.0.0.0				! ONLY v4
  --END--
  no ip redirects					! ONLY v4
