And then you discover that those id10ts at Cisco have enabled proxy ARP by default...

--- a/lab/cfg-generator/templates/pop-customer.cfg
+++ b/lab/cfg-generator/templates/pop-customer.cfg
@@ -36,12 +36,9 @@ interface loopback 0
  description "POP ${POP} Customer ${CUSTOMER} Loopback"
  --ONLY v4--
  ip address 172.2${POP}.${CUSTOMER}.1 255.255.255.255
- no ip redirects
- no ip directed-broadcast
  --END--
  --ONLY v6--
  ipv6 address 2001:db8:${POP}00${CUSTOMER}::1/128
- no ipv6 redirects
  --END--
  no shutdown
 !
@@ -53,6 +50,7 @@ interface f0/0
  ip address 172.16.2${POP}.6 255.255.255.252		! ONLY CUST2
  no ip redirects
  no ip directed-broadcast
+ no ip proxy-arp
  --END--
  --ONLY v6--
  ipv6 address 2001:db8:${POP}:ff0${CUSTOMER}::b/127
@@ -69,6 +67,7 @@ interface f0/1
  ip address 172.2${POP}.${CUSTOMER}.129 255.255.255.128
  no ip redirects
  no ip directed-broadcast
+ no ip proxy-arp
  --END--
  --ONLY v6--
  ipv6 address 2001:db8:${POP}00${CUSTOMER}:abcd::b/127
