--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -64,6 +64,7 @@ interface f0/0
  --ONLY v4--
  no ip redirects
  no ip directed-broadcast
+ no ip proxy-arp
  ip ospf 1 area ${POP}.0.0.0
  ip ospf message-digest-key 1 md5 "R04d5how-P0P${POP}"
  --END--
@@ -79,21 +80,22 @@ interface f0/1
  --ONLY R1--
  description "Link to POP${POP}-R2"
  ip address 172.16.1${POP}.1 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}01::a/127			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}01::a/127		! ONLY v6
  --END--
  --ONLY R2--
  description "Link to POP${POP}-R3"
  ip address 172.16.1${POP}.5 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}02::a/127			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}02::a/127		! ONLY v6
  --END--
  --ONLY R3--
  description "Link to POP${POP}-R1"
  ip address 172.16.1${POP}.9 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}03::a/127			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}03::a/127		! ONLY v6
  --END--
  --ONLY v4--
  no ip redirects
  no ip directed-broadcast
+ no ip proxy-arp
  ip ospf 1 area ${POP}.0.0.0
  ip ospf message-digest-key 1 md5 "R04d5how-P0P${POP}"
  --END--
@@ -130,10 +132,15 @@ interface e1/0
  ipv6 address 2001:db8:${POP}:ff02::a/127		! ONLY v6
  ipv6 ospf 1 area ${POP}.0.0.0				! ONLY v4
  --END--
- no ip redirects					! ONLY v4
- no ip directed-broadcast				! ONLY v4
- no ipv6 redirects					! ONLY v6
- ipv6 nd ra suppress all				! ONLY v6
+ --ONLY v4--
+ no ip redirects
+ no ip directed-broadcast
+ no ip proxy-arp
+ --END--
+ --ONLY v6--
+ no ipv6 redirects
+ ipv6 nd ra suppress all
+ --END--
  no shutdown
 !
 interface e1/1
@@ -145,6 +152,7 @@ interface e1/1
  ip ospf message-digest-key 1 md5 "R04d5how-C0RE"	! ONLY v4
  no ip redirects					! ONLY v4
  no ip directed-broadcast				! ONLY v4
+ no ip proxy-arp					! ONLY v4
  ipv6 address 2001:db8:0:2::${POP}/64			! ONLY v6
  ipv6 ospf 1 area 0.0.0.0				! ONLY v6
  no ipv6 redirects					! ONLY v6
@@ -156,6 +164,7 @@ interface e1/2
  duplex full
  no ip redirects					! ONLY v4
  no ip directed-broadcast				! ONLY v4
+ no ip proxy-arp					! ONLY v4
  no ipv6 redirects					! ONLY v6
  ipv6 nd ra suppress all				! ONLY v6
  shutdown
@@ -164,6 +173,7 @@ interface e1/3
  duplex full
  no ip redirects					! ONLY v4
  no ip directed-broadcast				! ONLY v4
+ no ip proxy-arp					! ONLY v4
  no ipv6 redirects					! ONLY v6
  ipv6 nd ra suppress all				! ONLY v6
  shutdown
