Upstream stuff and other fixes

--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -80,17 +80,17 @@ interface f0/1
  --ONLY R1--
  description "Link to POP${POP}-R2"
  ip address 172.16.1${POP}.1 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}01::a/127		! ONLY v6
+ ipv6 address 2001:db8:0:${POP}01::a/127			! ONLY v6
  --END--
  --ONLY R2--
  description "Link to POP${POP}-R3"
  ip address 172.16.1${POP}.5 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}02::a/127		! ONLY v6
+ ipv6 address 2001:db8:0:${POP}02::a/127			! ONLY v6
  --END--
  --ONLY R3--
  description "Link to POP${POP}-R1"
  ip address 172.16.1${POP}.9 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}03::a/127		! ONLY v6
+ ipv6 address 2001:db8:0:${POP}03::a/127			! ONLY v6
  --END--
  --ONLY v4--
  no ip redirects
@@ -112,25 +112,25 @@ interface e1/0
  description "Link to POP${POP}-CUST1"
  no cdp enable
  ip address 172.16.2${POP}.1 255.255.255.252		! ONLY v4
- ip ospf 1 area ${POP}.0.0.0				! ONLY v4
- ipv6 address 2001:db8:${POP}:ff01::a/127		! ONLY v6
- ipv6 ospf 1 area ${POP}.0.0.0				! ONLY v4
+ ip ospf 1 area ${POP}.0.0.0						! ONLY v4
+ ipv6 address 2001:db8:${POP}:ff01::a/127			! ONLY v6
+ ipv6 ospf 1 area ${POP}.0.0.0						! ONLY v4
  --END--
  --ONLY R2--
  description "Link to core switch SW1"
  ip address 172.16.0.$((POP+224)) 255.255.255.240	! ONLY v4
- ip ospf 1 area 0.0.0.0					! ONLY v4
+ ip ospf 1 area 0.0.0.0								! ONLY v4
  ip ospf message-digest-key 1 md5 "R04d5how-C0RE"	! ONLY v4
- ipv6 address 2001:db8:0:1::${POP}/64			! ONLY v6
- ipv6 ospf 1 area 0.0.0.0				! ONLY v6
+ ipv6 address 2001:db8:0:1::${POP}/64				! ONLY v6
+ ipv6 ospf 1 area 0.0.0.0							! ONLY v6
  --END--
  --ONLY R3--
  description "Link to POP${POP}-CUST2"
  no cdp enable
  ip address 172.16.2${POP}.5 255.255.255.252		! ONLY v4
- ip ospf 1 area ${POP}.0.0.0				! ONLY v4
- ipv6 address 2001:db8:${POP}:ff02::a/127		! ONLY v6
- ipv6 ospf 1 area ${POP}.0.0.0				! ONLY v4
+ ip ospf 1 area ${POP}.0.0.0						! ONLY v4
+ ipv6 address 2001:db8:${POP}:ff02::a/127			! ONLY v6
+ ipv6 ospf 1 area ${POP}.0.0.0						! ONLY v6
  --END--
  --ONLY v4--
  no ip redirects
@@ -145,38 +145,50 @@ interface e1/0
 !
 interface e1/1
  duplex full
- --ONLY R2--
+ --ONLY R2-v4--
  description "Link to core switch SW2"
- ip address 172.16.0.$((POP+240)) 255.255.255.240	! ONLY v4
- ip ospf 1 area 0.0.0.0					! ONLY v4
- ip ospf message-digest-key 1 md5 "R04d5how-C0RE"	! ONLY v4
- no ip redirects					! ONLY v4
- no ip directed-broadcast				! ONLY v4
- no ip proxy-arp					! ONLY v4
- ipv6 address 2001:db8:0:2::${POP}/64			! ONLY v6
- ipv6 ospf 1 area 0.0.0.0				! ONLY v6
- no ipv6 redirects					! ONLY v6
- ipv6 nd ra suppress all				! ONLY v6
- no shutdown
+ ip address 172.16.0.$((POP+240)) 255.255.255.240
+ ip ospf 1 area 0.0.0.0
+ ip ospf message-digest-key 1 md5 "R04d5how-C0RE"
+ no ip redirects
+ no ip directed-broadcast
+ no ip proxy-arp
  --END--
+ --ONLY R2-v6--
+ ipv6 address 2001:db8:0:2::${POP}/64
+ ipv6 ospf 1 area 0.0.0.0
+ no ipv6 redirects
+ ipv6 nd ra suppress all
+ --END--
+ no shutdown
 !
 interface e1/2
  duplex full
- no ip redirects					! ONLY v4
- no ip directed-broadcast				! ONLY v4
- no ip proxy-arp					! ONLY v4
- no ipv6 redirects					! ONLY v6
- ipv6 nd ra suppress all				! ONLY v6
+ no ip redirects									! ONLY v4
+ no ip directed-broadcast							! ONLY v4
+ no ip proxy-arp									! ONLY v4
+ no ipv6 redirects									! ONLY v6
+ ipv6 nd ra suppress all							! ONLY v6
  shutdown
+ --ONLY R2--
+ ip address 192.168.1.$((POP*4-2)) 255.255.255.252	! ONLY v4
+ ipv6 address 2001:DB9:FFFE:100${POP}::B/127		! ONLY v6
+ no shutdown
+ --END--
 !
 interface e1/3
  duplex full
- no ip redirects					! ONLY v4
- no ip directed-broadcast				! ONLY v4
- no ip proxy-arp					! ONLY v4
- no ipv6 redirects					! ONLY v6
- ipv6 nd ra suppress all				! ONLY v6
+ no ip redirects									! ONLY v4
+ no ip directed-broadcast							! ONLY v4
+ no ip proxy-arp									! ONLY v4
+ no ipv6 redirects									! ONLY v6
+ ipv6 nd ra suppress all							! ONLY v6
  shutdown
+ --ONLY R2--
+ ip address 192.168.2.$((POP*4-2)) 255.255.255.252	! ONLY v4
+ ipv6 address 2001:DB9:FFFE:200${POP}::B/127		! ONLY v6
+ no shutdown
+ --END--
 !
 --ONLY v4--
 router ospf 1
@@ -190,7 +202,6 @@ router ospf 1
 --END--
 --ONLY R2-v4--
  area 0.0.0.0 authentication message-digest
- area ${POP}.0.0.0 stub default-information-originate no-summary
  no passive-interface e1/0
  no passive-interface e1/1
 --END--
@@ -205,7 +216,6 @@ ipv6 router ospf 1
  no passive-interface f0/1
 --END--
 --ONLY R2-v6--
- area ${POP}.0.0.0 stub default-information-originate no-summary
  no passive-interface e1/0
  no passive-interface e1/1
 --END--
@@ -239,24 +249,32 @@ router bgp 65530
   neighbor Core-iBGP-IPv4 peer-group
   neighbor Core-iBGP-IPv4 remote-as 65530
   neighbor Core-iBGP-IPv4 update-source Loopback0
+  neighbor 192.168.1.$((POP*4-3)) remote-as 65531
+  neighbor 192.168.1.$((POP*4-3)) password "upstream-1"
+  neighbor 192.168.1.$((POP*4-3)) prefix-list UPSTREAM-OUT-IPv4 out
+  neighbor 192.168.1.$((POP*4-3)) activate
+  neighbor 192.168.2.$((POP*4-3)) remote-as 65532
+  neighbor 192.168.2.$((POP*4-3)) password "upstream-2"
+  neighbor 192.168.2.$((POP*4-3)) prefix-list UPSTREAM-OUT-IPv4 out
+  neighbor 192.168.2.$((POP*4-3)) activate
   neighbor 172.16.1.2 peer-group Core-iBGP-IPv4		! ONLY POP1EXISTS
-  neighbor 172.16.1.2 activate				! ONLY POP1EXISTS
+  neighbor 172.16.1.2 activate						! ONLY POP1EXISTS
   neighbor 172.16.2.2 peer-group Core-iBGP-IPv4		! ONLY POP2EXISTS
-  neighbor 172.16.2.2 activate				! ONLY POP2EXISTS
+  neighbor 172.16.2.2 activate						! ONLY POP2EXISTS
   neighbor 172.16.3.2 peer-group Core-iBGP-IPv4		! ONLY POP3EXISTS
-  neighbor 172.16.3.2 activate				! ONLY POP3EXISTS
+  neighbor 172.16.3.2 activate						! ONLY POP3EXISTS
   neighbor 172.16.4.2 peer-group Core-iBGP-IPv4		! ONLY POP4EXISTS
-  neighbor 172.16.4.2 activate				! ONLY POP4EXISTS
+  neighbor 172.16.4.2 activate						! ONLY POP4EXISTS
   neighbor 172.16.5.2 peer-group Core-iBGP-IPv4		! ONLY POP5EXISTS
-  neighbor 172.16.5.2 activate				! ONLY POP5EXISTS
+  neighbor 172.16.5.2 activate						! ONLY POP5EXISTS
   neighbor 172.16.6.2 peer-group Core-iBGP-IPv4		! ONLY POP6EXISTS
-  neighbor 172.16.6.2 activate				! ONLY POP6EXISTS
+  neighbor 172.16.6.2 activate						! ONLY POP6EXISTS
   neighbor 172.16.7.2 peer-group Core-iBGP-IPv4		! ONLY POP7EXISTS
-  neighbor 172.16.7.2 activate				! ONLY POP7EXISTS
+  neighbor 172.16.7.2 activate						! ONLY POP7EXISTS
   neighbor 172.16.8.2 peer-group Core-iBGP-IPv4		! ONLY POP8EXISTS
-  neighbor 172.16.8.2 activate				! ONLY POP8EXISTS
+  neighbor 172.16.8.2 activate						! ONLY POP8EXISTS
   neighbor 172.16.9.2 peer-group Core-iBGP-IPv4		! ONLY POP9EXISTS
-  neighbor 172.16.9.2 activate				! ONLY POP9EXISTS
+  neighbor 172.16.9.2 activate						! ONLY POP9EXISTS
  --END--
  --ONLY R3-v4--
   neighbor 172.16.${POP}.1 peer-group POP${POP}-iBGP-IPv4
@@ -295,24 +313,32 @@ router bgp 65530
   neighbor Core-iBGP-IPv6 peer-group
   neighbor Core-iBGP-IPv6 remote-as 65530
   neighbor Core-iBGP-IPv6 update-source Loopback0
+  neighbor 2001:db9:fffe:100${POP}::a remote-as 65531
+  neighbor 2001:db9:fffe:100${POP}::a password "upstream-1"
+  neighbor 2001:db9:fffe:100${POP}::a prefix-list UPSTREAM-OUT-IPv6 out
+  neighbor 2001:db9:fffe:100${POP}::a activate
+  neighbor 2001:db9:fffe:200${POP}::a remote-as 65532
+  neighbor 2001:db9:fffe:200${POP}::a password "upstream-2"
+  neighbor 2001:db9:fffe:200${POP}::a prefix-list UPSTREAM-OUT-IPv6 out
+  neighbor 2001:db9:fffe:200${POP}::a activate
   neighbor 2001:db8::1:2 peer-group Core-iBGP-IPv6	! ONLY POP1EXISTS
-  neighbor 2001:db8::1:2 activate			! ONLY POP1EXISTS
+  neighbor 2001:db8::1:2 activate					! ONLY POP1EXISTS
   neighbor 2001:db8::2:2 peer-group Core-iBGP-IPv6	! ONLY POP2EXISTS
-  neighbor 2001:db8::2:2 activate			! ONLY POP2EXISTS
+  neighbor 2001:db8::2:2 activate					! ONLY POP2EXISTS
   neighbor 2001:db8::3:2 peer-group Core-iBGP-IPv6	! ONLY POP3EXISTS
-  neighbor 2001:db8::3:2 activate			! ONLY POP3EXISTS
+  neighbor 2001:db8::3:2 activate					! ONLY POP3EXISTS
   neighbor 2001:db8::4:2 peer-group Core-iBGP-IPv6	! ONLY POP4EXISTS
-  neighbor 2001:db8::4:2 activate			! ONLY POP4EXISTS
+  neighbor 2001:db8::4:2 activate					! ONLY POP4EXISTS
   neighbor 2001:db8::5:2 peer-group Core-iBGP-IPv6	! ONLY POP5EXISTS
-  neighbor 2001:db8::5:2 activate			! ONLY POP5EXISTS
+  neighbor 2001:db8::5:2 activate					! ONLY POP5EXISTS
   neighbor 2001:db8::6:2 peer-group Core-iBGP-IPv6	! ONLY POP6EXISTS
-  neighbor 2001:db8::6:2 activate			! ONLY POP6EXISTS
+  neighbor 2001:db8::6:2 activate					! ONLY POP6EXISTS
   neighbor 2001:db8::7:2 peer-group Core-iBGP-IPv6	! ONLY POP7EXISTS
-  neighbor 2001:db8::7:2 activate			! ONLY POP7EXISTS
+  neighbor 2001:db8::7:2 activate					! ONLY POP7EXISTS
   neighbor 2001:db8::8:2 peer-group Core-iBGP-IPv6	! ONLY POP8EXISTS
-  neighbor 2001:db8::8:2 activate			! ONLY POP8EXISTS
+  neighbor 2001:db8::8:2 activate					! ONLY POP8EXISTS
   neighbor 2001:db8::9:2 peer-group Core-iBGP-IPv6	! ONLY POP9EXISTS
-  neighbor 2001:db8::9:2 activate			! ONLY POP9EXISTS
+  neighbor 2001:db8::9:2 activate					! ONLY POP9EXISTS
  --END--
  --ONLY R3-v6--
   neighbor 2001:db8::${POP}:1 peer-group POP${POP}-iBGP-IPv6
@@ -327,6 +353,12 @@ router bgp 65530
   neighbor 2001:db8:${POP}:ff02::2 activate
  --END--
 !
+--ONLY R2-v4--
+ip prefix-list UPSTREAM-OUT-IPv4 permit 172.16.0.0/12
+--END--
+--ONLY R2-v6--
+ipv6 prefix-list UPSTREAM-OUT-IPv6 permit 2001:db8::/32
+--END--
 --ONLY R3-v4--
 ip prefix-list POP${POP}-CUST2-IN-IPv4 permit 172.2${POP}.2.0/24
 ip prefix-list POP${POP}-CUST2-OUT-IPv4 permit 0.0.0.0/0 le 32
@@ -338,8 +370,8 @@ ipv6 prefix-list POP${POP}-CUST2-OUT-IPv6 permit ::/0 le 48
 !
 ip route 172.2${POP}.1.0 255.255.255.0 172.16.2${POP}.2		! ONLY R1-v4
 ipv6 route 2001:db8:${POP}001::/48 2001:db8:${POP}:ff01::2	! ONLY R1-v6
-ip route 172.16.0.0 255.240.0.0 Null 0				! ONLY R2-v4
-ipv6 route 2001:db8::/32 Null 0					! ONLY R2-v6
+ip route 172.16.0.0 255.240.0.0 Null 0						! ONLY R2-v4
+ipv6 route 2001:db8::/32 Null 0								! ONLY R2-v6
 !
 line console 0
  password ipv6
