Make some changes between upstreams, and fix dumb typo

--- a/lab/cfg-generator/templates/upstream-router.cfg
+++ b/lab/cfg-generator/templates/upstream-router.cfg
@@ -225,11 +225,11 @@ ipv6 prefix-list CUST-65530-IN-IPv6 permit 2001:db8::/32
 ipv6 prefix-list CUST-65530-OUT-IPv6 permit ::/0 le 48
 !
 ip route 10.234.123.0 255.255.255.0 null 0
-ip route 10.111.222.0 255.255.255.0 null 0
-ip route 10.321.128.0 255.255.128.0 null 0
+ip route 10.111.222.0 255.255.255.0 null 0		! ONLY UPSTREAM1
+ip route 10.121.128.0 255.255.128.0 null 0
 ip route 10.222.0.0 255.255.0.0 null 0
 ipv6 route fd64:8e44:70f2::/48 null 0
-ipv6 route fdc2:c3f2:6be0::/48 null 0
+ipv6 route fdc2:c3f2:6be0::/48 null 0			! ONLY UPSTREAM2
 ipv6 route fd4c:c670::/32 null 0
 !
 line console 0
