--- a/lab/cfg-generator/templates/pop-customer.cfg
+++ b/lab/cfg-generator/templates/pop-customer.cfg
@@ -88,6 +88,7 @@ router bgp 650${POP}2
   network 172.2${POP}.2.0 mask 255.255.255.0
   neighbor 172.16.2${POP}.5 remote-as 65530
   neighbor 172.16.2${POP}.5 description "BGP ISP POP${POP}-R2"
+  neighbor 172.16.2${POP}.5 prefix-list MYSELF-IPv4 out
   neighbor 172.16.2${POP}.5 password "Cu5t0m3r"
   neighbor 172.16.2${POP}.5 activate
 --END--
@@ -97,8 +98,17 @@ router bgp 650${POP}2
   network 2001:db8:${POP}002::/48
   neighbor 2001:db8:${POP}:ff02::1 remote-as 65530
   neighbor 2001:db8:${POP}:ff02::1 description "BGP ISP POP${POP}-R2"
+  neighbor 2001:db8:${POP}:ff02::1 prefix-list MYSELF-IPv6 out
   neighbor 2001:db8:${POP}:ff02::1 password "Cu5t0m3r"
   neighbor 2001:db8:${POP}:ff02::1 activate
+--END--
+!
+--ONLY CUST2-v4--
+ip prefix-list MYSELF-IPv4 permit 172.2${POP}.2.0/24
+--END--
+!
+--ONLY CUST2-v6--
+ipv6 prefix-list MYSELF-IPv6 permit 2001:db8:${POP}002::/4
 --END--
 !
 --ONLY v4--
