--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -172,7 +172,7 @@ interface e1/2
  shutdown
  --ONLY R2--
  ip address 192.168.1.$((POP*4-2)) 255.255.255.252	! ONLY v4
- ipv6 address 2001:DB9:FFFE:100${POP}::B/127		! ONLY v6
+ ipv6 address 2001:db9:ffff:100${POP}::b/127		! ONLY v6
  no shutdown
  --END--
 !
@@ -186,7 +186,7 @@ interface e1/3
  shutdown
  --ONLY R2--
  ip address 192.168.2.$((POP*4-2)) 255.255.255.252	! ONLY v4
- ipv6 address 2001:DB9:FFFE:200${POP}::B/127		! ONLY v6
+ ipv6 address 2001:db9:ffff:200${POP}::b/127		! ONLY v6
  no shutdown
  --END--
 !
@@ -250,12 +250,12 @@ router bgp 65530
   neighbor Core-iBGP-IPv4 remote-as 65530
   neighbor Core-iBGP-IPv4 update-source Loopback0
   neighbor 192.168.1.$((POP*4-3)) remote-as 65531
-  neighbor 192.168.1.$((POP*4-3)) password "upstream-1"
-  neighbor 192.168.1.$((POP*4-3)) prefix-list UPSTREAM-OUT-IPv4 out
+  neighbor 192.168.1.$((POP*4-3)) password "transit-1"
+  neighbor 192.168.1.$((POP*4-3)) prefix-list TRANSIT-OUT-IPv4 out
   neighbor 192.168.1.$((POP*4-3)) activate
   neighbor 192.168.2.$((POP*4-3)) remote-as 65532
-  neighbor 192.168.2.$((POP*4-3)) password "upstream-2"
-  neighbor 192.168.2.$((POP*4-3)) prefix-list UPSTREAM-OUT-IPv4 out
+  neighbor 192.168.2.$((POP*4-3)) password "transit-2"
+  neighbor 192.168.2.$((POP*4-3)) prefix-list TRANSIT-OUT-IPv4 out
   neighbor 192.168.2.$((POP*4-3)) activate
   neighbor 172.16.1.2 peer-group Core-iBGP-IPv4		! ONLY POP1EXISTS
   neighbor 172.16.1.2 activate						! ONLY POP1EXISTS
@@ -313,14 +313,14 @@ router bgp 65530
   neighbor Core-iBGP-IPv6 peer-group
   neighbor Core-iBGP-IPv6 remote-as 65530
   neighbor Core-iBGP-IPv6 update-source Loopback0
-  neighbor 2001:db9:fffe:100${POP}::a remote-as 65531
-  neighbor 2001:db9:fffe:100${POP}::a password "upstream-1"
-  neighbor 2001:db9:fffe:100${POP}::a prefix-list UPSTREAM-OUT-IPv6 out
-  neighbor 2001:db9:fffe:100${POP}::a activate
-  neighbor 2001:db9:fffe:200${POP}::a remote-as 65532
-  neighbor 2001:db9:fffe:200${POP}::a password "upstream-2"
-  neighbor 2001:db9:fffe:200${POP}::a prefix-list UPSTREAM-OUT-IPv6 out
-  neighbor 2001:db9:fffe:200${POP}::a activate
+  neighbor 2001:db9:ffff:100${POP}::a remote-as 65531
+  neighbor 2001:db9:ffff:100${POP}::a password "transit-1"
+  neighbor 2001:db9:ffff:100${POP}::a prefix-list TRANSIT-OUT-IPv6 out
+  neighbor 2001:db9:ffff:100${POP}::a activate
+  neighbor 2001:db9:ffff:200${POP}::a remote-as 65532
+  neighbor 2001:db9:ffff:200${POP}::a password "transit-2"
+  neighbor 2001:db9:ffff:200${POP}::a prefix-list TRANSIT-OUT-IPv6 out
+  neighbor 2001:db9:ffff:200${POP}::a activate
   neighbor 2001:db8::1:2 peer-group Core-iBGP-IPv6	! ONLY POP1EXISTS
   neighbor 2001:db8::1:2 activate					! ONLY POP1EXISTS
   neighbor 2001:db8::2:2 peer-group Core-iBGP-IPv6	! ONLY POP2EXISTS
@@ -354,10 +354,10 @@ router bgp 65530
  --END--
 !
 --ONLY R2-v4--
-ip prefix-list UPSTREAM-OUT-IPv4 permit 172.16.0.0/12
+ip prefix-list TRANSIT-OUT-IPv4 permit 172.16.0.0/12
 --END--
 --ONLY R2-v6--
-ipv6 prefix-list UPSTREAM-OUT-IPv6 permit 2001:db8::/32
+ipv6 prefix-list TRANSIT-OUT-IPv6 permit 2001:db8::/32
 --END--
 --ONLY R3-v4--
 ip prefix-list POP${POP}-CUST2-IN-IPv4 permit 172.2${POP}.2.0/24
