--- a/lab/cfg-generator/templates/pop-customer.cfg
+++ b/lab/cfg-generator/templates/pop-customer.cfg
@@ -7,6 +7,7 @@ no ip http server
 no ip http secure-server
 no ip finger
 no ip bootp server
+no cdp run
 !
 --ONLY v4--
 ip cef
@@ -57,7 +58,6 @@ interface f0/0
  no ipv6 redirects
  ipv6 nd ra suppress all
  --END--
- no cdp enable
  no shutdown
 !
 interface f0/1
