--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -7,6 +7,7 @@ no ip http server
 no ip http secure-server
 no ip finger
 no ip bootp server
+no cdp run
 !
 --ONLY v4--
 ip cef
@@ -108,7 +109,6 @@ interface e1/0
  duplex full
  --ONLY R1--
  description "Link to POP${POP}-CUST1"
- no cdp enable
  ip address 172.16.2${POP}.1 255.255.255.252		! ONLY v4
  ip ospf 1 area ${POP}.0.0.0						! ONLY v4
  ipv6 address 2001:db8:${POP}:ff01::a/127			! ONLY v6
@@ -123,7 +123,6 @@ interface e1/0
  --END--
  --ONLY R3--
  description "Link to POP${POP}-CUST2"
- no cdp enable
  ip address 172.16.2${POP}.5 255.255.255.252		! ONLY v4
  ip ospf 1 area ${POP}.0.0.0						! ONLY v4
  ipv6 address 2001:db8:${POP}:ff02::a/127			! ONLY v6
