Try new OSPF timers

--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -187,6 +187,10 @@ interface e1/3
 !
 --ONLY v4--
 router ospf 1
+ ispf
+ timers throttle spf 200 2000 90000
+ timers throttle lsa 200 10000 45000
+ timers lsa arrival 2000
  log-adjacency-changes
  router-id 172.16.${POP}.${ROUTER}
  area ${POP}.0.0.0 authentication message-digest
@@ -203,6 +207,9 @@ router ospf 1
 !
 --ONLY v6--
 ipv6 router ospf 1
+ timers throttle spf 200 2000 90000
+ timers throttle lsa 200 10000 45000
+ timers lsa arrival 2000
  log-adjacency-changes
  router-id 172.16.${POP}.${ROUTER}
  area ${POP}.0.0.0 stub
