Long BGP timers

--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -225,6 +225,8 @@ ipv6 router ospf 1
 router bgp 65530
  bgp router-id 172.16.${POP}.${ROUTER}
  bgp log-neighbor-changes
+ bgp graceful-restart
+ timers bgp 5000 30000 30000
  no bgp default ipv4-unicast				! ONLY v6
  --ONLY v4--
  address-family ipv4
