Long BGP timers

--- a/lab/cfg-generator/templates/pop-customer.cfg
+++ b/lab/cfg-generator/templates/pop-customer.cfg
@@ -79,6 +79,8 @@ interface f0/1
 router bgp 650${POP}2
  bgp router-id 172.2${POP}.2.1
  bgp log-neighbor-changes
+ bgp graceful-restart
+ timers bgp 5000 30000 30000
  no bgp default ipv4-unicast				! ONLY v6
 --END--
 --ONLY CUST2-v4--
