--- a/lab/cfg-generator/templates/transit-router.cfg
+++ b/lab/cfg-generator/templates/transit-router.cfg
@@ -160,6 +160,8 @@ interface e2/3
 router bgp 6553${TRANSIT}
  bgp router-id 192.168.0.${TRANSIT}
  bgp log-neighbor-changes
+ bgp graceful-restart
+ timers bgp 5000 30000 30000
  no bgp default ipv4-unicast
  address-family ipv4
   no auto-summary
