Fix bad neighbor address

--- a/lab/cfg-generator/templates/pop-customer.cfg
+++ b/lab/cfg-generator/templates/pop-customer.cfg
@@ -44,7 +44,8 @@ interface loopback 0
  no shutdown
 !
 interface f0/0
- description "Link to POP${POP}-R2"
+ description "Link to POP${POP}-R1"			! ONLY CUST1
+ description "Link to POP${POP}-R3"			! ONLY CUST2
  duplex full
  --ONLY v4--
  ip address 172.16.2${POP}.2 255.255.255.252		! ONLY CUST1
@@ -97,10 +98,10 @@ router bgp 650${POP}2
  address-family ipv6
   no synchronization
   network 2001:db8:${POP}002::/48
-  neighbor 2001:db8:${POP}:ff02::1 remote-as 65530
-  neighbor 2001:db8:${POP}:ff02::1 description "BGP ISP POP${POP}-R2"
-  neighbor 2001:db8:${POP}:ff02::1 prefix-list MYSELF-IPv6 out
-  neighbor 2001:db8:${POP}:ff02::1 activate
+  neighbor 2001:db8:${POP}:ff02::a remote-as 65530
+  neighbor 2001:db8:${POP}:ff02::a description "BGP ISP POP${POP}-R2"
+  neighbor 2001:db8:${POP}:ff02::a prefix-list MYSELF-IPv6 out
+  neighbor 2001:db8:${POP}:ff02::a activate
 --END--
 !
 --ONLY CUST2-v4--
@@ -117,7 +118,7 @@ ip route 0.0.0.0 0.0.0.0 172.16.2${POP}.1		! ONLY CUST1
 --END--
 --ONLY v6--
 ipv6 route 2001:db8:${POP}00${CUSTOMER}::/48 Null 0
-ipv6 route ::/0 2001:db8:${POP}:ff01::1			! ONLY CUST1
+ipv6 route ::/0 2001:db8:${POP}:ff01::a			! ONLY CUST1
 --END--
 !
 line console 0
