Fix neighbor on other side as well

--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -344,11 +344,11 @@ router bgp 65530
   neighbor 2001:db8::${POP}:1 activate
   neighbor 2001:db8::${POP}:2 peer-group POP${POP}-iBGP-IPv6
   neighbor 2001:db8::${POP}:2 activate
-  neighbor 2001:db8:${POP}:ff02::2 remote-as 650${POP}2
-  neighbor 2001:db8:${POP}:ff02::2 description "BGP customer POP${POP}-CUST2"
-  neighbor 2001:db8:${POP}:ff02::2 prefix-list POP${POP}-CUST2-IN-IPv6 in
-  neighbor 2001:db8:${POP}:ff02::2 prefix-list POP${POP}-CUST2-OUT-IPv6 out
-  neighbor 2001:db8:${POP}:ff02::2 activate
+  neighbor 2001:db8:${POP}:ff02::b remote-as 650${POP}2
+  neighbor 2001:db8:${POP}:ff02::b description "BGP customer POP${POP}-CUST2"
+  neighbor 2001:db8:${POP}:ff02::b prefix-list POP${POP}-CUST2-IN-IPv6 in
+  neighbor 2001:db8:${POP}:ff02::b prefix-list POP${POP}-CUST2-OUT-IPv6 out
+  neighbor 2001:db8:${POP}:ff02::b activate
  --END--
 !
 --ONLY R2-v4--
@@ -367,7 +367,7 @@ ipv6 prefix-list POP${POP}-CUST2-OUT-IPv6 permit ::/0 le 48
 --END--
 !
 ip route 172.2${POP}.1.0 255.255.255.0 172.16.2${POP}.2		! ONLY R1-v4
-ipv6 route 2001:db8:${POP}001::/48 2001:db8:${POP}:ff01::2	! ONLY R1-v6
+ipv6 route 2001:db8:${POP}001::/48 2001:db8:${POP}:ff01::b	! ONLY R1-v6
 ip route 172.16.0.0 255.240.0.0 Null 0						! ONLY R2-v4
 ipv6 route 2001:db8::/32 Null 0								! ONLY R2-v6
 !
