--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -234,6 +234,7 @@ router bgp 65530
   no synchronization
   redistribute static
   neighbor POP${POP}-iBGP-IPv4 peer-group
+  neighbor POP${POP}-iBGP-IPv4 next-hop-self
   neighbor POP${POP}-iBGP-IPv4 remote-as 65530
   neighbor POP${POP}-iBGP-IPv4 update-source Loopback0
  --END--
@@ -251,6 +252,7 @@ router bgp 65530
   neighbor 172.16.${POP}.3 peer-group POP${POP}-iBGP-IPv4
   neighbor 172.16.${POP}.3 activate
   neighbor Core-iBGP-IPv4 peer-group
+  neighbor Core-iBGP-IPv4 next-hop-self
   neighbor Core-iBGP-IPv4 remote-as 65530
   neighbor Core-iBGP-IPv4 update-source Loopback0
   neighbor 192.168.1.$((POP*4-3)) remote-as 65531
